# HarmonyOS_Gate-Sea_Soc

device/board/gate_sea/: BUILD.gn
device/board/gate_sea/gate_sea/: Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards
device/board/gate_sea/gate_sea/gs2000_zb202_board/: BUILD.gn  Kconfig.liteos_m.board
device/board/gate_sea/gate_sea/gs2000_zb202_board/application/: BUILD.gn
device/board/gate_sea/gate_sea/gs2000_zb202_board/application/lfs/: littlefs_test.c
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/bsp/: BUILD.gn
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/bsp/include/: board_sta_def.h  target_config.h  uart.h
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/bsp/ld/: GS2000xx_ZB202_FLASH.ld
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/bsp/src/: gs2000xx_it.c  main.c  system_gsmcuStartup.c  uart.c
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/bsp/startup/: startup_gs2000xx.s
device/board/gate_sea/gate_sea/gs2000_zb202_board/liteos_m/hdf_config/: BUILD.gn  Kconfig.liteos_m.board
device/board/gate_sea/gate_sea/gs2100_zb205_board/: Kconfig.liteos_m.board
device/board/gate_sea/gate_sea/gs2100_zb205_board/application/: BUILD.gn
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/bsp/: BUILD.gn
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/bsp/include/: bps_port.h  bps_zerocross.h  bsp.h  uart.h
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/bsp/ld/: GS2100xx_ZB205_FLASH.ld
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/bsp/src/: bps_flash.c  bps_port.c  bps_uart.c  bsp.c  dprintf.c  gs2100xx_hal_msp.c  system_GSMCU_M3.c  uart.c
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/bsp/startup/: startup_gs2100xx.s
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/fs/littlefs/: BUILD.gn
device/board/gate_sea/gate_sea/gs2100_zb205_board/liteos_m/hdf_config/: BUILD.gn
device/board/gate_sea/gs2000_zb202_board/: BUILD.gn  Kconfig.liteos_m.defconfig.board  ohos.build
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/application/gpio/: gpio_test.c
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/: config.gni
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/bsp/include/: gs2000xx_it.h  uart.h
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/bsp/ld/: GS2000xx_ZB202_FLASH.ld
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/bsp/src/: gs2000xx_hal_msp.c
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/bsp/startup/: startup_gs2000xx.s
device/board/gate_sea/gs2000_zb202_board/gs2000_zb202_board/liteos_m/hdf_config/: BUILD.gn  device_info.hcs  gpio_config.hcs  gs2000_zb202_board.hcs
device/board/gate_sea/gs2000_zb202_board/liteos_m/: BUILD.gn  config.gni
device/board/gate_sea/gs2000_zb202_board/liteos_m/bsp/: BUILD.gn
device/board/gate_sea/gs2000_zb202_board/liteos_m/bsp/include/: board_sta_def.h  target_config.h
device/board/gate_sea/gs2000_zb202_board/liteos_m/bsp/ld/: GS2000xx_ZB202_FLASH.ld
device/board/gate_sea/gs2000_zb202_board/liteos_m/bsp/src/: dprintf.c  gs2000xx_it.c  main.c  system_gsmcuStartup.c  uart.c
device/board/gate_sea/gs2000_zb202_board/liteos_m/fs/: BUILD.gn
device/board/gate_sea/gs2000_zb202_board/liteos_m/fs/littlefs/: BUILD.gn
device/board/gate_sea/gs2000_zb202_board/liteos_m/hdf_config/: BUILD.gn  device_info.hcsX
device/board/gate_sea/gs2000_zb202_board/utils/: BUILD.gn  circular_queue.c
device/board/gate_sea/gs2100_zb205_board/: BUILD.gn  Kconfig.liteos_m.defconfig.board  ohos.build
device/board/gate_sea/gs2100_zb205_board/application/: BUILD.gn
device/board/gate_sea/gs2100_zb205_board/liteos_m/: BUILD.gn  config.gni
device/board/gate_sea/gs2100_zb205_board/liteos_m/bsp/: BUILD.gn
device/board/gate_sea/gs2100_zb205_board/liteos_m/bsp/include/: board_sta_def.h  bps_debug.h  bps_flash.h  bps_led.h  bps_timer.h  bps_uart.h  bsp_wdg.h  gs2100xx_it.h  serial_port.h  target_config.h
device/board/gate_sea/gs2100_zb205_board/liteos_m/bsp/ld/: GS2100xx_ZB205_FLASH.ld
device/board/gate_sea/gs2100_zb205_board/liteos_m/bsp/src/: bps_debug.c  bps_led.c  bps_timer.c  bps_zerocross.c  bsp.c  bsp_wdg.c  dprintf.c  gs2100xx_it.c  main.c  serial_port.c
device/board/gate_sea/gs2100_zb205_board/liteos_m/bsp/startup/: startup_gs2100xx.s
device/board/gate_sea/gs2100_zb205_board/liteos_m/hdf_config/: Kconfig.liteos_m.board  device_info.hcs  device_info.hcsX  gs2100_zb205_board.hcs  uart_config.hcs
device/board/gate_sea/gs2100_zb205_board/utils/: circular_queue.h
device/soc/gate_sea/: Kconfig.liteos_m.series
device/soc/gate_sea/gate_sea/: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.soc
device/soc/gate_sea/gate_sea/gs2000xx/: Kconfig.liteos_m.defconfig.gs2000xx  Kconfig.liteos_m.series
device/soc/gate_sea/gate_sea/gs2000xx/sdk/: BUILD.gn
device/soc/gate_sea/gate_sea/gs2000xx/sdk/Drivers/: BUILD.gn
device/soc/gate_sea/gate_sea/gs2100xx/: Kconfig.liteos_m.defconfig.gs2100xx  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
device/soc/gate_sea/gs2000xx/: Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.soc
device/soc/gate_sea/gs2000xx/sdk/Drivers/: BUILD.gn
device/soc/gate_sea/gs2000xx/sdk/Drivers/CMSIS/: BUILD.gn
device/soc/gate_sea/gs2000xx/sdk/Drivers/GS2000xx_HAL_Driver/: BUILD.gn
device/soc/gate_sea/gs2000xx/sdk/Drivers/GS2000xx_HAL_Driver/Inc/: gsmcu_adc.h  gsmcu_flash.h  gsmcu_gpio.h  gsmcu_iwdg.h  gsmcu_mac.h  gsmcu_scu.h  gsmcu_ssp.h  gsmcu_tim.h  gsmcu_usart.h
device/soc/gate_sea/gs2000xx/sdk/Drivers/GS2000xx_HAL_Driver/Src/: gsmcu_adc.c  gsmcu_cortex.c  gsmcu_flash.c  gsmcu_iic.c  gsmcu_iwdg.c  gsmcu_tim.c  gsmcu_usart.c
device/soc/gate_sea/gs2000xx/sdk/Drivers/hdf_drivers/: BUILD.gn
device/soc/gate_sea/gs2100xx/: BUILD.gn  Kconfig.liteos_m.defconfig.series
device/soc/gate_sea/gs2100xx/sdk/: BUILD.gn
device/soc/gate_sea/gs2100xx/sdk/Drivers/: BUILD.gn
device/soc/gate_sea/gs2100xx/sdk/hals/: BUILD.gn
(+92 files in other folders)
