# Copyright (c) 2024 Gate-Sea Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [ "startup/startup_gs2000xx.s" ]

  sources += [
    "src/dprintf.c",
    "src/main.c",
    "src/gs2000xx_hal_msp.c",
    "src/system_gsmcuStartup.c",
    "src/gs2000xx_it.c",
    "src/uart.c",
  ]

  include_dirs = [
    "include",
    "../fs/littlefs/include",
  ]

  include_dirs += [
    "//base/hiviewdfx/hiview_lite",
    "//base/hiviewdfx/hilog_lite/frameworks/mini",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
  ]

  if (build_xts) {
    deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
  }
}

# ohos_board_adapter_dir device/soc/xxx
config("public") {
  include_dirs = [
    ".",
    "include",
    "$ohos_board_adapter_dir/Core/Inc",
    "$ohos_board_adapter_dir/Drivers/GS2000xx_HAL_Driver/Inc",
    "$ohos_board_adapter_dir/Drivers/CMSIS/Device/gate-sea/GS2000xx/Include",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
    "//drivers/hdf_core/framework/core/common/include/manager",
  ]

  ldflags = [
    "-Wl,-T" + rebase_path("ld/GS2000xx_ZB202_FLASH.ld"),
    "-Wl,-u_printf_float",
  ]

  if (build_xts) {
    lib_dirs = [ "$root_out_dir/libs" ]
    ldflags += [
      "-Wl,--whole-archive",
      "-lbootstrap",
      "-lbroadcast",
      "-lhctest",
      "-lhal_sysparam",
      #"-lmodule_ActsSamgrTest",
      #"-lmodule_ActsBootstrapTest",
      #"-lmodule_ActsDfxFuncTest",
      #"-lmodule_ActsHieventLiteTest",
      #"-lmodule_ActsUpdaterFuncTest",

      #"-lmodule_ActsHuksHalFunctionTest",
      #"-lhuks_test_common",

      "-lmodule_ActsUtilsFileTest",
      "-lmodule_ActsParameterTest",

      "-Wl,--no-whole-archive",
    ]
  }

  libs = [
    "c",
    "m",
    "nosys",
  ]
}
