# Copyright (c) 2024-2026 Gate-Sea Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")

kernel_module(module_name) {
  sources = [
    "./Src/gsmcu_adc.c",
    "./Src/gsmcu_cortex.c",
    "./Src/gsmcu_crc.c",
    "./Src/gsmcu_dma.c",
    "./Src/gsmcu_flash.c",
    "./Src/gsmcu_gpio.c",
    "./Src/gsmcu_iic.c",
    "./Src/gsmcu_iwdg.c",
    "./Src/gsmcu_mac.c",
    "./Src/gsmcu_scu.c",
    "./Src/gsmcu_ssp.c",
    "./Src/gsmcu_tim.c",
    "./Src/gsmcu_trng.c",
    "./Src/gsmcu_usart.c",
    "./Src/gsmcuxx_hal.c",
  ]

  include_dirs = [
    "./Inc",
  ]
}
